test/FAIL/assertcmd/memory_match/08_test_assert.emu
#-------
#TEST_RETURN_CODE=FAIL
#TEST_COMMENT="no file loaded"
#-------

assert word 15 0x100
